--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -9,7 +9,18 @@
   max-height: 85vh;
   aspect-ratio: 3/2;
 }
-
+.logo-home{
+position: absolute;
+width: 300px !important;
+height: 300px !important;
+margin: 30px;
+left: 10%;
+transform: translate(5%, 25%);
+background-color: white;
+border-radius: 420px;
+padding: 15px;
+box-shadow: 0px 0px 5px 0px rgba(157, 98, 98, 0.874);
+}
 .titulo-home {
   position: absolute;
   margin: 30px;
@@ -18,7 +29,7 @@
   font-size: 5rem;
   color: white;
   text-shadow: 1px 1px 2px black;
-  cursor:default;
+  cursor: default;
 }
 .primer-texto-home {
   margin: 20px 80px;
@@ -29,14 +40,14 @@
 .carousel-control-prev-icon{
   background-color: rgba(79, 66, 66, 0.541);
 } */
-.carousel-control-next{
+.carousel-control-next {
   right: 40px;
 }
 
-.carousel-control-prev{
+.carousel-control-prev {
   left: 40px;
 }
-.carousel-container{
+.carousel-container {
   display: grid;
   justify-content: center;
   align-items: center;
@@ -66,7 +77,7 @@
   font-size: 1.8rem;
 }
 
-.carousel-img-home{
+.carousel-img-home {
   max-height: 90vh !important;
 }
 .bienvenidos-home-div h2 {
@@ -76,23 +87,22 @@
   font-size: 2.3rem;
 }
 @media screen and (min-width: 771px) {
-.bienvenidos-home-div {
-  position: absolute;
-  z-index: 1;
-  margin: 30px;
-  text-align: left;
-}
+  .bienvenidos-home-div {
+    position: absolute;
+    z-index: 1;
+    margin: 30px;
+    text-align: left;
+  }
 }
 
-.presentacion-home  {
+.presentacion-home {
   background-image: url("./../../img/presentacion.jpg");
-  background-size:cover;
-  background-position:bottom;
+  background-size: cover;
+  background-position: bottom;
   padding: 150px 0px;
-
   text-align: right;
 }
-.presentacion-home div{
+.presentacion-home div {
   background: rgba(37, 25, 35, 0.624);
   padding: 30px;
   margin: 0px 50px;
@@ -150,7 +160,7 @@
     margin: 15px 25px;
     font-size: 1rem;
   }
-  .presentacion-home  {
+  .presentacion-home {
     padding: 0px;
   }
   .presentacion-home div {
@@ -161,14 +171,14 @@
     font-size: 1.2rem;
     font-weight: 600;
   }
-   .presentacion-home a { 
+  .presentacion-home a {
     font-size: 1.2rem;
     font-weight: 400;
-  } 
+  }
 }
 @media screen and (max-width: 457px) {
   .carousel-caption {
-    padding:2px;
+    padding: 2px;
   }
   .carousel-caption p {
     font-size: 1rem;
