--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -11,10 +11,11 @@ text-shadow: 1px 1px 1px rgba(29, 28, 28, 0.8);
 }
 .logo-header{
 width: 40px;
-background-color: white;
+/* background-color: white; */
 border-radius: 120px;
 padding: 2px;
-box-shadow: 0px 0px 5px 0px rgba(157, 98, 98, 0.874);
+/* box-shadow: 0px 0px 5px 0px rgba(157, 98, 98, 0.874); */
+box-shadow: 0px 0px 5px 0px rgba(47, 44, 44, 0.874);
 }
 .footer a{
 font-size: small;
