--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -26,13 +26,14 @@
   height: 80vh;
 }
 .logo-home {
-  width: 250px !important;
-  height: 250px !important;
+  width: 240px !important;
+  height: 240px !important;
   margin: 30px;
-  background-color: white;
+  /* background-color: white; */
   border-radius: 420px;
   padding: 15px;
-  box-shadow: 0px 0px 10px 5px rgba(157, 98, 98, 0.874);
+  /* box-shadow: 0px 0px 10px 5px rgba(157, 98, 98, 0.874); */
+  box-shadow: 0px 0px 15px 5px rgba(47, 44, 44, 0.874);
 }
 .titulo-home {
   margin: 30px;
