--- a/src/pages/categorias/categorias.css
+++ b/src/pages/categorias/categorias.css
@@ -5,7 +5,6 @@
   padding-top: 30px;
   display: flex;
   flex-direction: column;
-
 }
 .categorias-article h2 {
   font-size: 3rem;
@@ -26,21 +25,21 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 20px; 
+  gap: 20px;
 }
-.categorias-container section a:hover{
-text-decoration: none;
-color: #fff;
+.categorias-container section a:hover {
+  text-decoration: none;
+  color: #110792;
 }
 .categorias-img {
   width: 280px;
   height: 200px;
   margin: 5px;
-  border-radius: 5px;
-  box-shadow:0px 0px 10px 5px rgba(157, 98, 98, 0.386);
+  border-radius: 120px;
+  box-shadow: 0px 0px 10px 5px rgba(157, 98, 98, 0.386);
 }
 
-.volver-button{
+.volver-button {
   border-radius: 0px 0px 12px 0px;
 }
 
