--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -20,23 +20,25 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
-  flex-direction: row;
+
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
   height: 80vh;
 }
 .logo-home {
-  width: 240px !important;
-  height: 240px !important;
-  margin: 30px;
-  /* background-color: white; */
-  border-radius: 420px;
+  width: 150px !important;
+  height: 150px !important;
+  border-radius: 500px;
   padding: 15px;
-  /* box-shadow: 0px 0px 10px 5px rgba(157, 98, 98, 0.874); */
+  text-align: end !important;
   box-shadow: 0px 0px 15px 5px rgba(47, 44, 44, 0.874);
+  position: absolute;
+  right: 70px;
+  top: 140px;
 }
 .titulo-home {
-  margin: 30px;
+  /* margin: 30px; */
   font-size: 8rem;
   color: white;
   text-shadow: 1px 5px 15px black;
@@ -48,9 +50,10 @@
     height: 40vh;
   }
   .logo-home {
-    width: 150px !important;
-    height: 150px !important;
+    width: 100px !important;
+    height: 100px !important;
     margin: 20px;
+    position:static;
   }
   .titulo-home {
     margin: 20px;
@@ -59,14 +62,14 @@
 }
 @media screen and (max-width: 800px) {
   .logo-titulo-container {
-     flex-direction: column;
+    flex-direction: column;
   }
   .logo-home {
-    width: 100px !important;
-    height: 100px !important;
+    width: 80px !important;
+    height: 80px !important;
     margin: 10px;
   }
-  }
+}
 
 .primer-texto-home {
   margin: 20px 80px;
@@ -117,15 +120,15 @@
   max-height: 90vh !important;
 }
 .bienvenidos-home-div h2 {
-  color: #fff;
+  color: #020202;
   margin: 20px 10vw;
-  text-shadow: 1px 2px 2px black;
+  text-shadow: 1px 2px 2px rgba(113, 77, 77, 0.713);
   font-size: 2.3rem;
 }
 @media screen and (min-width: 771px) {
   .bienvenidos-home-div {
-    position: absolute;
-    z-index: 1;
+    /* position: absolute;
+    z-index: 1; */
     margin: 30px;
     text-align: left;
   }
@@ -138,7 +141,7 @@
   padding: 150px 0px;
   text-align: right;
 }
-.presentacion-home div {
+.presentacion-home_div {
   background: rgba(37, 25, 35, 0.624);
   padding: 30px;
   margin: 0px 50px;
@@ -158,6 +161,12 @@
   font-size: 1.7rem;
   font-weight: 600;
 }
+.div-saber-mas {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 
 @media screen and (max-width: 900px) {
   .bienvenidos-home-div h2 {
@@ -172,7 +181,6 @@
   }
 }
 @media screen and (max-width: 771px) {
-  
   .bienvenidos-home-div h2 {
     margin: 20px 10px;
     font-size: 1.6rem;
