--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -11,10 +11,11 @@
 }
 
 .logo-titulo-container {
-  background-image: linear-gradient(
+  background-image: 
+  /* linear-gradient(
       rgba(255, 255, 255, 0.2),
       rgba(255, 255, 255, 0.4)
-    ),
+    ), */
     url("./../../img/portada.jpg");
   background-position: center;
   background-repeat: no-repeat;
