--- a/src/components/instagram/instagram.css
+++ b/src/components/instagram/instagram.css
@@ -1,4 +1,4 @@
-.instagram-media {
+/* .instagram-media {
   background: #fff;
   border: 0;
   border-radius: 3px;
@@ -198,4 +198,4 @@
   font-weight: normal;
   line-height: 17px;
   text-decoration: none;
-}
+} */
