--- a/src/components/eBook_buy/eBookBuy.css
+++ b/src/components/eBook_buy/eBookBuy.css
@@ -1,4 +1,4 @@
-.img-ebook-buy {
+/* .img-ebook-buy {
     width: 140px;
     height: 200px;
   }
@@ -43,4 +43,4 @@
       grid-template: 1fr / auto;
       gap: 20px;
     }
-  }
+  } */
